--- a/chat/src/main/resources/application.yaml
+++ b/chat/src/main/resources/application.yaml
@@ -6,3 +6,10 @@ socketio:
   hostname: localhost
   port: 3000
 
+spring:
+  redis:
+    database: 7
+    host: 127.0.0.1
+    port: 6379
+    password: willow
+
